--- a/index.html
+++ b/index.html
@@ -34,11 +34,14 @@
     <!-- Parágrafo monospace-->
     <p class="mono">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam similique quod quasi maxime voluptate tempora dolorum magni ex illo cumque, quae perspiciatis culpa aperiam dolores quis blanditiis asperiores consequuntur doloribus!</p>
     <br>
-
-
     <p class="font-weight-bold">Texto Negrito</p>
     <p class="font-weight-normal">Texto Normal</p>
     <p class="font-italic">Texto Itálico</p>
+
+    <h3>Alinhamentos</h3>
+    <p class="text-left">Esquerda</p>
+    <p class="text-center">Centro</p>
+    <p class="text-right">Direita</p>
     
    
 
