--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
     <p class="text-left">Esquerda</p>
     <p class="text-center">Centro</p>
     <p class="text-right">Direita</p>
+
+    <h3>Bockquote</h3>
+    <blockquote class="text-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, illo. Magnam voluptatum error commodi dolores sed dicta laudantium, vitae, praesentium aspernatur distinctio animi aliquid ipsum veniam possimus et vel quisquam.
+    <footer>por</footer>
+    <cite>Raíssa Azevedo</cite>
+    </blockquote>
     
    
 
