Formatação de textos

--- a/index.html
+++ b/index.html
@@ -43,12 +43,31 @@
     <p class="text-center">Centro</p>
     <p class="text-right">Direita</p>
 
-    <h3>Bockquote</h3>
-    <blockquote class="text-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, illo. Magnam voluptatum error commodi dolores sed dicta laudantium, vitae, praesentium aspernatur distinctio animi aliquid ipsum veniam possimus et vel quisquam.
-    <footer>por</footer>
-    <cite>Raíssa Azevedo</cite>
+    <h3>Blockquote</h3>
+    <blockquote class="blockquote text-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, illo. Magnam voluptatum error commodi dolores sed dicta laudantium, vitae, praesentium aspernatur distinctio animi aliquid ipsum veniam possimus et vel quisquam.
+    <footer class="blockquote-footer">por  <cite>Raíssa Azevedo</cite></footer>
+  
     </blockquote>
-    
+    <br>
+    <!-- Texto truncado-->
+    <p class="text-truncate">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, similique? Molestias nostrum ratione ipsa aliquid eveniet. Provident, obcaecati odio voluptatem sunt ullam facere laborum illo eligendi nihil. Quia, deleniti excepturi?</p>
+    <br>
+    <br>
+    <!--Listas sem estilo-->
+
+    <ul class="list-unstyled">
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+    </ul>
+
+      <!--Listas sem estilo-->
+
+      <ul class="list-inline">
+        <li class="list-inline-item">Item 1</li>
+        <li class="list-inline-item">Item 2</li>
+        <li class="list-inline-item">Item 3</li>
+      </ul>
    
 
 
